# LANE

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LANEman.py  Makefile  README.md  configLane.py  plugins.ini  runLane.py  setupBuild.py
cmake/: CXX11.cmake
doc/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt
lib/lane/: CMakeLists.txt
lib/lane/include/: Frame.hpp  LaneFile.hpp  Pixel.hpp
lib/lane/include/Lucid/: LucidFile.hpp
lib/lane/include/Utils/: Endian.hpp
lib/lane/src/: LaneFile.cpp
lib/lane/src/Lucid/: LucidFile.cpp
lib/libLANE/: CMakeLists.txt  README.md
lib/libLANE/include/: Blob.hpp  LANEFile.hpp  RawInputFile.hpp
lib/libLANE/include/Utils/: Logger.hpp  LoggerSink.hpp  Misc.hpp
lib/libLANE/src/: Blob.cpp  BlobFinder.cpp  LANEFile.cpp
lib/libLANE/src/LUCID/: LUCIDFile.cpp
lib/libLANE/src/Utils/: FilesystemLinux.cpp  FilesystemWindows.cpp  LoggerSink.cpp
lib/libLANE/test/: BlobFinderTest.cpp  BlobTest.cpp  EndianTest.cpp
lib/libLANEpy/: CMakeLists.txt  README.md
lib/libLUCID/: CMakeLists.txt  Makefile  README.md
lib/libLUCID/include/: Blob.hpp  BlobFinder.hpp  Frame.hpp  LANEFile.hpp  Pixel.hpp  RawInputFile.hpp
lib/libLUCID/include/LUCID/: Frame.hpp  LUCIDFile.hpp  Pixel.hpp
lib/libLUCID/include/Utils/: Endian.hpp  Filesystem.hpp  Logger.hpp  LoggerSink.hpp  Misc.hpp
lib/libLUCID/src/: Blob.cpp  BlobFinder.cpp  CMakeLists.txt  Frame.cpp  LANEFile.cpp  LUCIDFile.cpp  Pixel.cpp
lib/libLUCID/src/LUCID/: LUCIDFile.cpp
lib/libLUCID/src/Utils/: Filesystem.cpp  FilesystemLinux.cpp  FilesystemWindows.cpp  Logger.cpp  LoggerSink.cpp
lib/libLUCID/test/: BlobFinderTest.cpp  BlobTest.cpp  EndianTest.cpp  FileReadTest.cpp  FilesystemTest.cpp  FrameTest.cpp  LUCIDFileTest.cpp  PixelTest.cpp
modules/: CMakeLists.txt
modules/BasicClusterAnalysis/: CMakeLists.txt
modules/BasicClusterAnalysis/src/: BasicClusterAnalysis.cpp  BasicClusterAnalysis.hpp  Main.cpp
modules/Pairing/: CMakeLists.txt
modules/Pairing/src/: Pairing.py  pairing.py  readBCA.py
modules/RawToIntermediate/: CMakeLists.txt  LANE - Shortcut.lnk
modules/RawToIntermediate/src/: Main.cpp  rawToIntermediate.py
plugins/: CMakeLists.txt  plugins.conf  plugins.ini
plugins/BasicClusterAnalysis/: CMakeLists.txt  README.md
plugins/BasicClusterAnalysis/src/: BasicClusterAnalysis.cpp  BasicClusterAnalysis.hpp  Main.cpp
plugins/Pairing/: CMakeLists.txt  LICENSE.md  README.md
plugins/Pairing/src/: Pairing.py  ReadBCA.py
plugins/RawToIntermediate/: CMakeLists.txt  LICENSE.md  README.md
plugins/RawToIntermediate/src/: Main.cpp
plugins/testPlugin/: CMakeLists.txt  Makefile  README.md
plugins/testPlugin/src/: CMakeLists.txt  Main.cpp  Sample.hpp
plugins/testPluginPython/: CMakeLists.txt  LICENSE.md  README.md  testPluginPython.py
scripts/: InstallLANE.py  RawToIntermediate.py  findLucidFilesWithHeader.py  installLANE.py  joinFiles.py  rawToIntermediate.py  sortLucidCaptures.py
tools/: CMakeLists.txt
tools/lusplit/: CMakeLists.txt  README.md
tools/lusplit/src/: Main.cpp
